test/fixtures/eval/eval_messages.snapshot
[eval]
[eval]:1
with(this){__filename}
^^^^
The 'with' statement is not supported. All symbols in a 'with' block will have type 'any'.

SyntaxError: Strict mode code may not include a with statement
    at <node-internal-frames>

Node.js <node-version>
42
42
[eval]:1
throw new Error("hello")
^

Error: hello
    at [eval]:1:7
    at <node-internal-frames>
    at [eval]-wrapper:6:24
    at <node-internal-frames>

Node.js <node-version>
[eval]:1
throw new Error("hello")
^

Error: hello
    at [eval]:1:7
    at <node-internal-frames>
    at [eval]-wrapper:6:24
    at <node-internal-frames>

Node.js <node-version>
100
[eval]:1
var x = 100; y = x;
               ^

ReferenceError: y is not defined
    at [eval]:1:16
    at <node-internal-frames>
    at [eval]-wrapper:6:24
    at <node-internal-frames>

Node.js <node-version>

[eval]:1
var ______________________________________________; throw 10
                                                    ^
10
(Use `<node-exe> --trace-uncaught ...` to show where the exception was thrown)

Node.js <node-version>

[eval]:1
var ______________________________________________; throw 10
                                                    ^
10
(Use `<node-exe> --trace-uncaught ...` to show where the exception was thrown)

Node.js <node-version>
done
